--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "axios": "^1.4.0",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
@@ -14,6 +15,7 @@
     },
     "devDependencies": {
         "@types/jest": "^29.5.1",
+        "@types/lodash": "^4.14.195",
         "@types/node": "^20.1.3",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
