--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/css": "^11.11.0",
         "axios": "^1.4.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
