--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/css": "^11.11.0",
         "axios": "^1.4.0",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
