--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "dependencies": {
         "@emotion/css": "^11.11.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.13.6",
         "axios": "^1.4.0",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
