--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "react": "^18.2.0",
+        "react-datepicker": "^4.14.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-router-dom": "^6.11.1",
@@ -23,6 +24,7 @@
         "@types/lodash": "^4.14.195",
         "@types/node": "^20.1.3",
         "@types/react": "^18.2.6",
+        "@types/react-datepicker": "^4.11.2",
         "@types/react-dom": "^18.2.4",
         "typescript": "^5.0.4"
     },
