--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-datepicker": "^4.14.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-outside-click-handler": "^1.3.0",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
@@ -27,6 +28,7 @@
         "@types/react": "^18.2.6",
         "@types/react-datepicker": "^4.11.2",
         "@types/react-dom": "^18.2.4",
+        "@types/react-outside-click-handler": "^1.3.1",
         "typescript": "^5.0.4"
     },
     "scripts": {
