--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-outside-click-handler": "^1.3.0",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
+        "react-select": "^5.7.4",
         "react-toastify": "^9.1.3",
         "use-debounce": "^9.0.4",
         "web-vitals": "^2.1.4"
