--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-datepicker": "^4.14.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-minimal-pie-chart": "^8.4.0",
         "react-outside-click-handler": "^1.3.0",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
