--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "^18.2.0",
         "react-datepicker": "^4.14.1",
         "react-dom": "^18.2.0",
+        "react-google-charts": "^4.0.1",
         "react-icons": "^4.8.0",
         "react-minimal-pie-chart": "^8.4.0",
         "react-outside-click-handler": "^1.3.0",
